Adiciona endpoint para retornar as transações de todas as contas
